--- a/public/partials/customers.html
+++ b/public/partials/customers.html
@@ -23,7 +23,7 @@
 				<tr ng-repeat="customer in customers | filter: filter_name">
 					<td>{{customer.name}}</td>
 					<td>{{customer.created  | date: 'longDate' }}</td>
-					<td><button class="btn btn-danger" ng-click="removeCust($index)">Remove</button></td>
+					<td><button ng-model="deleteCustomer.id" class="btn btn-danger" ng-click="deleteCustomer(index)">Remove</button></td>
 				</tr>
 			</tbody>
 		</table>
