--- a/public/partials/orders.html
+++ b/public/partials/orders.html
@@ -24,7 +24,7 @@
 			<input type="text" ng-model="filter_name" class="form-control" placeholder="Customer Name">
 			<input type="text" ng-model="filter_product" class="form-control" placeholder="Product">
 		</div>
-		<table class='table table-striped'>
+		<table class='table table-striped' ng-controller="OrderController">
 			<thead>
 				<th>Customer Name</th>
 				<th>Product</th>
